--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = Kosuke Ito
-	email = ito-kosuke0502@g.ecc.u-tokyo.ac.jp
+	name = vitocchi
+	email = vitocchi.mm@gmail.com
 [merge]
 	tool = vimdiff
 [include]
