--- a/.gitconfig
+++ b/.gitconfig
@@ -6,7 +6,7 @@
 [include]
     path = .gitconfig.local
 [core]
-	excludesfile = /Users/itokosuke/.gitignore_global
+	excludesfile = $HOME/.gitignore_global
     # http://stackoverflow.com/questions/136178/git-diff-handling-long-lines
     pager = less -r
     editor = vi
