--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "editor.fontFamily": "Ricty,Menlo, Monaco, 'Courier New', monospace",
-    "workbench.colorTheme": "Monokai Classic",
+    "workbench.colorTheme": "Gruvbox Dark Soft",
     "workbench.editor.enablePreview": false,
     "window.zoomLevel": 1,
     "editor.fontSize": 14,
