--- a/.gitconfig
+++ b/.gitconfig
@@ -9,7 +9,7 @@
 	excludesfile = $HOME/.gitignore_global
     # http://stackoverflow.com/questions/136178/git-diff-handling-long-lines
     pager = less -r
-    editor = vi
+    editor = vim
 [color]
     ui = auto   
 [push]
